@@ -1,3 +1,6 @@
+2007-11-03  Stéphane Charette  <stephanecharette@gmail.com>
+	* src/plugins/NarrativeWeb.py: resize and link to large images
+
 2007-11-03 Gary Burton <gary.burton@zen.co.uk>
 	* src/plugins/DetDescendantReport.py
 	* src/plugins/DetAncestralReport.py
